--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <warName>apps#project1</warName>
+                    <warName>${warOutputName}</warName>
                     <outputDirectory>${warOutputDirectory}</outputDirectory>
                 </configuration>
             </plugin>
