--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
 
     <groupId>com.arvue.apps</groupId>
     <artifactId>project1</artifactId>
-    <!--<basedir>C:\Users\niemin75\Desktop\mideaas_projects/project1</basedir>-->
     <version>1.0</version>
     <packaging>war</packaging>
 
@@ -79,9 +78,9 @@
 				<version>${gwt.plugin.version}</version>
 				<configuration>
 					<extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-					<webappDirectory>C:\Users\niemin75\Desktop\mideaas_projects/project1/src/main/webapp/VAADIN/widgetsets
+					<webappDirectory>${projectDirectory}/src/main/webapp/VAADIN/widgetsets
 					</webappDirectory>
-					<hostedWebapp>C:\Users\niemin75\Desktop\mideaas_projects/project1/src/main/webapp/VAADIN/widgetsets
+					<hostedWebapp>${projectDirectory}/src/main/webapp/VAADIN/widgetsets
 					</hostedWebapp>
 					<noServer>true</noServer>
 					<!-- Remove draftCompile when project is ready -->
