--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,12 +12,12 @@
         <init-param>
             <description>Vaadin UI class to start</description>
             <param-name>ui</param-name>
-            <param-value>com.arvue.apps.project1.App</param-value>
+            <param-value>com.arvue.apps.projectx.App</param-value>
         </init-param>
                 <init-param>
             <description>Application widgetset</description>
             <param-name>widgetset</param-name>
-            <param-value>com.arvue.apps.project1.gwt.AppWidgetSet</param-value>
+            <param-value>com.arvue.apps.projectx.gwt.AppWidgetSet</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
